# Meeting-Bots-Control-Panel

./: README.md  docker-compose.yml
.github/workflows/: api-backend-lint.yml  worker-backend-build-status.yml
api-backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  package.json
api-backend/src/: app.module.ts  main.ts
api-backend/src/auth/: api-key.controller.ts  api-key.service.ts  auth.controller.ts  auth.module.ts  auth.service.ts
api-backend/src/aws/: aws.module.ts  aws.service.ts  ecs.service.ts
pg-db/: .db.env.example  .gitignore  init-multiple-databases.sql
protos/worker_backend.transcript_management/: transcript_management.proto
worker-backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
worker-backend/api/: file_backend.py  grpc_backend.py  models.py  pagination.py  urls.py  utils.py  views.py
worker-backend/api/transcript_management/: apps.py  models.py  serializers.py  urls.py  views.py  worker.py
worker-backend/api/transcript_management/grpc/: endpoints.py  filters.py  serializers.py  services.py  transcript_management_pb2.py  transcript_management_pb2_grpc.py
worker-backend/api/transcript_management/management/commands/: reprocess_transcripts.py
worker-backend/api/transcript_management/migrations/: 0001_initial.py  0002_filelog_notes.py
worker-backend/api/transcript_management/utils/: helper.py  sns_verifier.py  speaker_reconciliation.py
worker-backend/worker_backend/: asgi.py  celery.py  monitoring.py  settings.py  tokenizer.py  urls.py  wsgi.py
(+26 files in other folders)
